# ampere

./: .gitignore  README.md  otf2csv.c  pyproject.toml
examples/hpl-mxp-trace/: MPI Rank 0_metrics.csv
examples/hpl-trace/: MANIFEST.md  MPI Rank 0__callgraph.csv  scorep.cfg  traces.def  traces.otf2
examples/hpl-trace/traces/: 1.def  103079215104.evt  107374182400.evt  111669149696.evt  115964116992.evt  120259084288.evt  124554051584.evt  12884901888.evt  128849018880.evt  133143986176.evt  137438953472.evt  141733920768.evt  146028888064.evt  150323855360.evt  154618822656.evt  158913789952.evt  17179869184.evt  2.def  21474836480.evt  25769803776.evt  3.def  30064771072.evt  34359738368.evt  38654705664.evt  4.def  4294967296.evt  42949672960.evt  47244640256.evt  5.def  51539607552.evt  55834574848.evt  6.def  60129542144.evt  64424509440.evt  68719476736.evt  7.def  73014444032.evt  77309411328.evt  81604378624.def  81604378624.evt  (+5 more)
src/ampere/: __init__.py  session.py  visualizer.py
tests/: test_core.py
